<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">贝壳单词</string>
    <string name="action_back">返回</string>
    <string name="sample_bottommenu">Today:</string>
    <string name="pulldown_scrollview">PulldownScrollView</string>
    <string name="add_attention">刷新</string>
    <string name="user_post">已更新 0 次单词</string>
    <string name="user_look">详细浏览次数：0 次</string>
    <string name="user_name">未设置用户名</string>
    <string name="user_des">“详细浏览率”越高，更新的频率越高，但最高不超过一天一次。</string>
    <string name="share_text">背单词的时候我就想，市面上单词APP做得再好，用户不愿打开就根本没用。于是，「贝壳单词」用完全不一样的方式，让你在无意识无压力之中轻松地增加词汇量，从此，就算大学的英语课不上了，也不必再担心英语日渐倒退，因为你每一天都在无意识之中稳步进行。下载地址：http://app.mi.com/detail/65475</string>
    <string name="title_activity_about">关于</string>
    <string name="hello_world">Hello world!</string>
    <string name="noboringactionbar_title">已背单词</string>
    <string name="my_blog">反馈/作者博客：http://drakeet.me</string>
    <string name="my_open_source_link">源代码：https://github.com/drakeet/Seashell-app</string>
    <string name="my_email">联系：drakeet.me@gmail.com</string>
    <string name="my_name">作者：drakeet</string>
    <string name="about_declaration">\n声明：贝壳单词使用的应用图标资源来自网络，\n\t\t\t\t 感谢原作者！若涉及侵权请联系我删除。</string>
    <string name="double_click_exit">再按一次返回键退出</string>
    <string name="api">http://test.drakeet.me/?key=seashell2</string>
    <string name="title_activity_setting">设置</string>
    <string name="hand_switch">left_hand_key</string>
    <string name="my_favorite">我的收藏</string>
    <string name="xiaomi_attention"><![CDATA[小米用户系统请进入系统应用:安全中心->授权管理->自启动应用管理 后允许『贝壳单词』自启动，否则无法自启动]]></string>
    <string name="notify_with_phonetic">notify_with_phonetic</string>

</resources>
