<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">
    <CheckBoxPreference
        android:title="左手习惯"
        android:key="@string/hand_switch"
        android:summaryOn="当前为左手习惯"
        android:summaryOff="当前为右手习惯"
        android:defaultValue="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:title="在通知栏显示音标"
        android:key="@string/notify_with_phonetic"
        android:summaryOn="当前为显示"
        android:summaryOff="当前为不显示"
        android:defaultValue="false">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:title="开机自启动"
        android:summaryOn="@string/xiaomi_attention"
        android:summaryOff="@string/xiaomi_attention"
        android:defaultValue="true">
    </CheckBoxPreference>
</PreferenceScreen>