<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context="me.drakeet.seashell.ui.AboutActivity"
    >

    <ScrollView
        android:id="@+id/sc_about"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bg_about"
        android:layout_width="fill_parent"
        android:layout_height="474dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/avatar80x80"/>

        <TextView
            android:id="@+id/versionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appname_about"
            android:layout_centerHorizontal="true"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1"
            android:text="Version"
            android:textColor="#FF0000"
            android:textSize="9sp"/>

        <TextView
            android:id="@+id/appname_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/app_name"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/versionNumber"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/my_name"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignStart="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="6dp"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/my_email"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignStart="@+id/textView1"
            android:layout_below="@+id/textView"
            android:layout_marginTop="6dp"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/my_open_source_link"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignStart="@+id/textView1"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="6dp"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/my_blog"/>
    </RelativeLayout>

</RelativeLayout>
    <!--
        作者：drakeet
        联系：drakeet.me@gmail.com
        源代码：https://github.com/drakeet/Seashell-app
        作者博客：http://drakeet.me
        -->
